--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,8 +1,8 @@
 /* Navbar Stylings */
 #navbar {
   position: fixed;
-  left: 20%;
-  right: 20%;
+  left: 15%;
+  right: 15%;
 }
 
 #navbar .container,
@@ -25,7 +25,7 @@
 }
 
 #navbar .container ul {
-  width: 50%;
+  width: 60%;
   font-size: 1.1rem;
 }
 
@@ -58,10 +58,23 @@
 
 /* Homepage Stylings */
 #homepage .hero-container {
-  height: 40rem;
-  background-image: url("/src/assets/francesca-tosolini-tHkJAMcO3QE-unsplash.jpg");
+  height: 30rem;
+  background-image: url("/src/assets/lauren-pelesky-9Jmf_Jzn38w-unsplash.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   padding-top: 10rem;
+}
+
+#homepage .hero-container .container {
+  text-align: center;
+}
+
+.hero-container .container h1 {
+  -webkit-text-stroke: 1px rgb(47, 79, 79);
+  font-weight: 900;
+  font-size: 3rem;
+  color: white;
+  line-height: 2;
+  text-shadow: -7px 7px 15px rgb(47, 79, 79);
 }
